--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
   </body>
   <script>
    function updateChart() {
-       fetch('/api')
+       fetch('/api/range/')
            .then(response => response.json())
            .then(values => {
                data.datasets[0].values =values;
@@ -16,9 +16,14 @@
            })
    }
 
+
+
    var data = {
        labels: [
-           "1","2","3","4","5","6","7","8","9","10"
+           "1","2","3","4","5","6","7","8","9","10",
+           "11","12","13","14","15","16","17","18","19","20",
+           "21","22","23","24","25","26","27","28","29","30",
+           "31","32"
        ],
        datasets: [
            {
